# AraNES-LMS-core

./: .dockerignore  .env.example  .gitignore  Dockerfile.core  README.md  TODO.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: AGENT_NATIVE_AUDIT_REPORT.md  CAPABILITIES.md  FUTURE_AGENT_MCP.md  analysis_report_ru.md  cache_and_revocation.md  configuration.md  doc.md  how_to_create_permission_and_load_use.md  how_to_create_translate_for_keys.md  operability.md  plugin_manager_architecture.md  release.md
gateway_server/: Dockerfile  __init__.py  gateway.py
logs/: profile.log.json
migrations/: env.py
migrations/versions/: 6f0f7d3b7f6d_add_plugin_mappings.py  e8484413100f_initial_schema.py
requirements/: dev.txt  release.txt
scripts/: container_prestart.py  create_superuser.py  profile_tests.sh
services/demo_fastapi/: main.py  manifest.json  requirements.txt  run.sh
services/demo_flask/: app.py  manifest.json  requirements.txt  run.sh
services/demo_node/: manifest.json  requirements.txt  run.sh  server.js
src/: api.py  app.py  config.py  database.py  loader.py  runtime.py  settings.py  startup.py
src/auth/: crud.py  dependencies.py  exceptions.py  passwords.py  revocation.py  route.py  schemas.py  service.py  tokens.py
src/core/: config.py
src/http/: __init__.py  constants.py  errors.py  openapi.py  (+1 more)
tests/: conftest.py  test_config.py  test_container_prestart.py  test_database.py  test_http_openapi.py  test_runtime_engine_config.py  test_startup_bootstrap_unit.py  test_startup_lifespan.py
(+89 files in other folders)
